Minimal contractility assay (anti-parallel filaments, isometric tension) + GPU enablement
Two anti-parallel phalloidin-stiff filaments pinned at their plus ends to the
outer walls of a long narrow box; one bipolar minifilament in the central
overlap. Measures the isometric contractile tension at each anchor.

- IC builder makeContractilityAssay() + FilSegment.makeStraightChain(); pin
  registry generalized from the deflection benchmark (benchmark still passes,
  ratio 0.998); per-step tension readout (Dot(forceSum, inwardDir)) -> [STATS]
  + frame contractility block; contractilityAssay/contractNoMotor/
  contractReversePolarity flags.
- CPU validated: tension ~2pN contractile, both anchors inward ~equal;
  no-motor control ~0; reversed polarity = extension.
- GPU: on the merged cohesion fix the minifilament HOLDS (span 0.18um, zero
  NaN, clean 102-frame run); requires noMonomersSimd:false (config
  contractilityAssay_gpu) so the per-step host sync the fix needs stays on.
  Motor BINDING is still CPU-only (boundMotors=0 on GPU) -> no contractile
  tension on GPU yet; the measurement requires CPU. See JOURNAL.

Consolidated onto origin/main (cohesion-fix merge). Bloated GPU blow-up run
logs truncated (were 123MB/29MB of 'Crazy'/CUDA-error spam).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>